Fixing issue with double scroll bar in AddLocations page

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -349,7 +349,7 @@ TABS FOR LOCATION CONTROLLER
     max-height: 580px;
     overflow: none;
     overflow-x: none;
-    overflow-y: auto;
+    /*overflow-y: auto;*/
     width: 100%;
     
 }
